[package]
name = "tic_tac_toe"
version = "0.1.2"
authors = ["Swarthon <swarthon.gokan@gmail.com>"]
readme = "README.md"
keywords = ["TicTacToe", "Game"]
categories = ["games"]
license = "GPL-3.0"
description = "TicTacToe is a simple Tic Tac Toe game"

[badges]
travis-ci = { repository = "https://travis-ci.org/Swarthon/TicTacToe", branch = "master" }

[dependencies]
clap				= "2.22.1"
piston_window			= "0.64.0"
conrod				= {version="0.49",features=["piston","piston2d-graphics", "glium"]}
rand 				= "0.3.15"
find_folder 			= "0.3.0"
